bk_ida/gccida/g3/find_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1458:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1479:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v28; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1480:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v29; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1485:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v34; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1486:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v35; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1493:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v42; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1494:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v43; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1523:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v72; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1524:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v73; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode new_losersa; // [rsp+18h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1562:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v6 = *( int *)( ( char *)&allocno_0->reg + v5); 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1568:15: error: use of undeclared identifier 'allocno_0'
v8 = ( char *)allocno_0 + v5; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1570:30: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
+ 8LL * *( int *)( ( char *)&allocno_0->reg + v5)) 
                             ^~~~~~~~~
                             allocno
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1596:38: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( v15, ( machine_mode)v9) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1605:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)v9) - 5) > 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1664:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v21 = allocno_0; 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1665:16: error: use of undeclared identifier 'allocno_0'
v22 = ( char *)allocno_0 + v97; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1668:43: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v24 = *( HARD_REG_ELT_TYPE *)( ( _BYTE *)&allocno_0->hard_reg_copy_preferences + v97) & ~v13; 
                                          ^~~~~~~~~
                                          allocno
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:1669:36: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
*( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->hard_reg_copy_preferences + v97) = v24; 
                                   ^~~~~~~~~
                                   allocno
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reg/src/obj/global.o] Error 1
